--- a/views/index.html
+++ b/views/index.html
@@ -1,30 +1,28 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>wiki</title>
-        <link rel="stylesheet" href="/static/style.css" type="text/css">
-
-    </head>
-
-    <body>
-        <header>
-            <h1>Min wiki</h1>
-        </header>
-
-            <aside>
-                <a href="ny_artikel.html">
-                    <h2>Skapa en ny artikel</h2>
-                </a>
-            </aside>
-
-        <main>
-            <h2> Artiklar</h2>
-                    % for rubrik in filer:
-                <a href="/fakta/{{ rubrik['id'] }}">
-                    <h3>{{ rubrik['rubrik'] }}</h3>
-                </a>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="container mt-5">
+      <form action="/login" method="post">
+        <h2>Logga in</h2>
+            % if error:
+                <div class="alert alert-danger">{{error}}</div>
             % end
-        </main>
-    </body>
+        <div class="mb-3">
+          <label class="form-label">Användarnamn</label>
+          <input type="text" class="form-control" name="username" required>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Lösenord</label>
+          <input type="password" class="form-control" name="password" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Logga in</button>
+      </form>
+    </div>
+  </body>
 </html>
